# BettingwithAI

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  _make_logo_test.py  _sleep.ps1  baseline_metrics.md  check_dml.py  pyproject.toml  railway.toml  requirements-cuda.txt
.agent-artifacts/: a4f2e881_live_latency_plan.md  b73f2a1c_support_intent_training_plan.md  c8e1f2a4_owner_dashboard_zero_trust_plan.md  d2f8a7c3_hybrid_gpu_stacking_plan.md  f7c3a9d2_gpu_retrain_plan.md  intent_classifier_upgrade_plan.md  mobile_optimization_plan.md  theodds_historical_20k_budget_plan.md  value_bet_optimization_plan.md
.plan/: support_chatbot_plan.md
.plans/: arc_left_rail_plan.md  investors_section_plan.md  sofascore_lineups_widget_plan.md
Erweiterungen/: GEO-DeepDive-bettingwithai.docx  SEO Battle Plan.md  SEO-Playbook-bettingwithai.docx  Staking-Algorithmen.md  chatbot-llm-plan.md  geo-tracking-spreadsheet.csv  performance-tracker-plan.md  performance-tracker-spec.md  seo_battle_plan_implementation.md  seo_plan.md  theodds-historical-plan.md  weather-feature-konzept.md
_plans/: bettingwithai_public_access_plan.md  equity_split_plan.md  gpu_kelly_training_plan.md  kickoff_time_dst_plan.md  optimization_roadmap_2026-04-23.md  prediction_live_correct_badges_plan.md  staking_1x2_predictions_plan.md
data/: live_scores.jsonl  stadiums.json
docs/: cloud_training.md  datenhistorie_aktueller_stand.md  local_training.md  nomen_serving_plan.md  nomen_training_plan.md  runpod_training.md  value_bet_pipeline.md  value_bet_training_data.md
logs/: _probe_features.py  _probe_gpu.py  probe_features.txt  v3_rollout.err
models/: catboost_BL.calibrator.joblib  catboost_BL.cbm  catboost_BL.features.txt  catboost_CH.calibrator.joblib  catboost_CH.cbm  catboost_CH.features.txt  catboost_LL.calibrator.joblib  catboost_LL.cbm  catboost_PL.calibrator.joblib  catboost_PL.cbm  catboost_PL.features.txt  (+33 more)
(+424 files in other folders)
