[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football_betting"
version = "0.3.1"
description = "NOMEN — Hybrides Machine-Learning-Modell zur Vorhersage von Fußballspielausgängen, Toren und Wettwerten."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "requests>=2.31",
    "curl-cffi>=0.7",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.6",
    "joblib>=1.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# v0.3: PyTorch MLP deps — optional to keep baseline install light
ml = [
    "torch>=2.2",
    "onnx>=1.15",
    "onnxruntime>=1.17",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
embedding = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
]
# M2b: optional augmentation backends (LLM paraphrase + MarianMT backtranslation)
support-aug = [
    "openai>=1.40",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "sacremoses>=0.1",
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "jupyter>=1.0",
    "httpx>=0.27",
]
all = [
    "football_betting[ml,api,dev,embedding,support-aug]",
]

[project.scripts]
fb = "football_betting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
football_betting = ["_bundled/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=football_betting --cov-report=term-missing"
